--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
+KERNEL_SOURCE=https://github.com/OnePlusOSS/android_kernel_oneplus_sm8150
+KERNEL_SOURCE_BRANCH=oneplus/sm8150_R_10.0
+KERNEL_CONFIG=vendor/trinket_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
@@ -18,7 +18,7 @@ CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
 CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r450784e
+CLANG_VERSION=r416138b
 
 # GCC
 ENABLE_GCC_ARM64=true
@@ -39,10 +39,10 @@ KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
 # Configuration
-DISABLE-LTO=false
-DISABLE_CC_WERROR=false
-ADD_KPROBES_CONFIG=false
-ADD_OVERLAYFS_CONFIG=false
+DISABLE-LTO=true
+DISABLE_CC_WERROR=ture
+ADD_KPROBES_CONFIG=true
+ADD_OVERLAYFS_CONFIG=true
 
 # Ccache
 ENABLE_CCACHE=true
