--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/OnePlusOSS/android_kernel_oneplus_sm815
+KERNEL_SOURCE=https://github.com/OnePlusOSS/android_kernel_oneplus_sm8150
 KERNEL_SOURCE_BRANCH=oneplus/sm8150_R_10.0
 KERNEL_CONFIG=vendor/trinket_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
@@ -33,7 +33,7 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=false
+ENABLE_KERNELSU=ture
 KERNELSU_TAG=main
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
