--- a/config.env
+++ b/config.env
@@ -33,14 +33,14 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=ture
+ENABLE_KERNELSU=flags
 KERNELSU_TAG=main
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
 # Configuration
 DISABLE-LTO=true
-DISABLE_CC_WERROR=ture
+DISABLE_CC_WERROR=true
 ADD_KPROBES_CONFIG=true
 ADD_OVERLAYFS_CONFIG=true
 
