--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/OnePlusOSS/android_kernel_oneplus_sm8150
+KERNEL_SOURCE=https://github.com/OnePlusOSS/android_kernel_oneplus_sm8150/tree/oneplus/SM8150_R_10.0/arch/arm64/configs/vendor
 KERNEL_SOURCE_BRANCH=oneplus/SM8150_R_10.0
-KERNEL_CONFIG=configs/cuttlefish_defconfig
+KERNEL_CONFIGvendor=/trinket_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
