--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/OnePlusOSS/android_kernel_oneplus_sm8150/tree/oneplus/SM8150_R_10.0/arch/arm64/configs/vendor
 KERNEL_SOURCE_BRANCH=oneplus/SM8150_R_10.0
-KERNEL_CONFIGvendor=/trinket_defconfig
+KERNEL_CONFIGvendor=vendor/sm8150_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
@@ -17,8 +17,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r416183b
+CLANG_BRANCH=android11-release
+CLANG_VERSION=r383902b
 
 # GCC
 ENABLE_GCC_ARM64=true
@@ -34,7 +34,7 @@ CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
 ENABLE_KERNELSU=true
-KERNELSU_TAG=main
+KERNELSU_TAG=v0.6.2
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
