--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/OnePlusOSS/android_kernel_oneplus_sm8150
 KERNEL_SOURCE_BRANCH=oneplus/SM8150_R_10.0
-KERNEL_CONFIGvendor=cuttlefish_defconfig
+KERNEL_CONFIG=cuttlefish_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
@@ -23,7 +23,7 @@ CLANG_VERSION=r383902b
 # GCC
 ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
-USE_CUSTOM_GCC_64=false
+USE_CUSTOM_GCC_64=true
 CUSTOM_GCC_64_SOURCE=
 CUSTOM_GCC_64_BRANCH=
 CUSTOM_GCC_64_BIN=aarch64-linux-android-
@@ -34,11 +34,12 @@ CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
 ENABLE_KERNELSU=true
-KERNELSU_TAG=v0.6.2
-
+KERNELSU_TAG=main
+KSU_EXPECTED_SIZE=
+KSU_EXPECTED_HASH=
 
 # Configuration
-DISABLE-LTO=true
+DISABLE-LTO=false
 DISABLE_CC_WERROR=true
 ADD_KPROBES_CONFIG=true
 ADD_OVERLAYFS_CONFIG=true
@@ -51,4 +52,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=false
-SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
+SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.im
