--- a/config.env
+++ b/config.env
@@ -23,7 +23,7 @@ CLANG_VERSION=r383902b
 # GCC
 ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
-USE_CUSTOM_GCC_64=true
+USE_CUSTOM_GCC_64=false
 CUSTOM_GCC_64_SOURCE=
 CUSTOM_GCC_64_BRANCH=
 CUSTOM_GCC_64_BIN=aarch64-linux-android-
