--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/OnePlusOSS/android_kernel_oneplus_sm8150
-KERNEL_SOURCE_BRANCH=oneplus/SM8150_R_10.0
-KERNEL_CONFIG=vendor/trinket-perf_defconfig
+KERNEL_SOURCE_BRANCH=一加/sm8150_s_12.1_op7pro
+KERNEL_CONFIG=vendor/sm8150-perf_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
