--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/OnePlusOSS/android_kernel_oneplus_sm8150
-KERNEL_SOURCE_BRANCH=oneplus/sm8150_s_12.1_op7pro
-KERNEL_CONFIG=vendor/atoll_defconfig
+KERNEL_SOURCE=https://github.com/crdroidandroid/android_kernel_xiaomi_mars
+KERNEL_SOURCE_BRANCH=13.0
+KERNEL_CONFIG=vendor/star-qgki_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
